# NTMDTRead.py

./: pyproject.toml
