[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "NTMDTRead"
version = "0.1.0"
description = "A set of tools to read NT-MDT files."
authors = ["KOLANICH <email@example.com>"]
readme = "ReadMe.md"
homepage = "https://gitlab.com/KOLANICH/NTMDTRead"
keywords = ["nt-mdt", "AFM", "SPM", "probe", "microscopy", "mdt", "palette"]
license = "Unlicense or GPLv3 depending on module"
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"License :: OSI Approved :: GNU General Public License (GPL)",
	"Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
kaitaistruct = "^0.10"
numpy = "*"
matplotlib = "*"
configobj = "*"
beautifulsoup4 = "*"
lxml = "*"
lazy-object-proxy = "*"
setuptools = "^70.2.0"
pantarei = "^0.4.0"
pint = "^0.24.1"

[tool.poetry.dev-dependencies]
# Add your development dependencies here

[tool.setuptools_scm]

[tool.kaitai]

[tool.kaitai.repos."https://github.com/KOLANICH/kaitai_struct_formats.git"."mdt"]
update = true
search = true
localPath = "kaitai_struct_formats" # rel to pyproject.toml dir
inputDir = "scientific/nt_mdt" # rel to localPath
outputDir = "NTMDTRead/kaitai" # rel to localPath

[tool.kaitai.repos."https://github.com/KOLANICH/kaitai_struct_formats.git"."mdt".formats]
